--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gsap": "^3.12.2",
     "lenis": "^1.1.3",
-    "ogl": "^1.0.6"
+    "ogl": "^1.0.6",
+    "sharp": "^0.34.1"
   }
 }
